--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend-ts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "ts-node src/",
     "test": "echo \"Error: no test specified\" && exit 1"
