--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
+    "sourceMap": true,
+    "target": "es6",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "baseUrl": "src",
-    "outDir": "dist",
-    "sourceMap": true,
+    "baseUrl": "./src",
+    "outDir": "./dist",
+    "resolveJsonModule": true,
     "noImplicitAny": true
   },
-  "include": ["src/**/*", "src/index.ts"]
+  "include": ["src/**/*", "./package.json"]
 }
